add the tests from afterburner, to validate that the changes to the Injector haven't broken any anticipated edge cases from the original code